--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,9 @@ section {
 .custom-pink {
   background-color: #ff69b4;
 }
+
+.uniform-img{
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
