--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,12 @@ section {
   background-color: rgb(250, 230, 250);
 }
 
-.btn-primary{
-  background-color: blueviolet;
+.btn-primary {
+  background-color: #ff69b4; /* Hot Pink */
+  border-color: #ff69b4;
+}
+
+.btn-primary:hover {
+  background-color: #e0559f; /* Darker pink on hover */
+  border-color: #e0559f;
 }
